--- a/config.toml
+++ b/config.toml
@@ -6,17 +6,18 @@ build-mindetach-module = true
 # see https://github.com/j-hc/revanced-magisk-module/blob/main/CONFIG.md for more detailed explanations
 
 [YouTube]
-build-mode = "both"                                                   # 'both', 'apk' or 'module'
-excluded-patches = ""                                                 # space-seperated patches to exclude (multiline strings are not supported)
-included-patches = ""                                                 # space-seperated patches to include (non-excluded patches are included by default)
-version = "auto"                                                      # 'auto', 'latest', 'beta' or a custom one like '17.40.41'
-apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
+apkmirror-dlurl = "https://apkmirror.com/apk/google-inc/youtube/"
+patches-source = "inotia00/revanced-patches"
+integrations-source = "inotia00/revanced-integrations"
+cli-source = "inotia00/revanced-cli"
+rv-brand = "ReVanced Extended"
+build-mode = "module"
+included-patches = "add-splash-animation enable-debug-logging force-premium-heading materialyou"
+excluded-patches = "change-homepage custom-branding-youtube-name custom-package-name disable-shorts-on-startup enable-external-browser enable-tablet-mini-player enable-tablet-navigation-bar hide-account-menu hide-autoplay-button hide-autoplay-preview hide-captions-button hide-category-bar hide-channel-avatar-section hide-collapse-button hide-description-components hide-end-screen-cards hide-info-cards hide-latest-videos-button hide-load-more-button hide-mix-playlists hide-music-button hide-player-button-background hide-player-flyout-panel hide-speed-overlay hide-suggested-actions hide-suggested-video-overlay hide-suggestions-shelf hide-time-stamp microg-support spoof-app-version theme"
 
 [Music]
-build-mode = "both"
-excluded-patches = ""
-apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube-music/"
-apkmirror-arch = "both"                                                     # both arm64-v8a and arm-v7a
+apkmirror-dlurl = "https://apkmirror.com/apk/google-inc/youtube-music/"
+excluded-patches = "vanced-microg-support"
 
 [Twitter]
 build-mode = "apk"
