--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,7 @@
 name: CI
 on:
-  workflow_dispatch:
-  schedule:
-    - cron: "0 16 * * *"
+  check_suite:
+    types: [completed]
 
 jobs:
   check:
